# convex_hull

./: Cargo.toml  README.md
examples/: main.rs
examples/shader/: base.fs
src/: bufferset.rs  convex_hull.rs  defs.rs  lib.rs  main.rs  mesh.rs
src/half_edge_mesh/: components.rs  edge.rs  face.rs  half_edge_mesh.rs  iterators.rs  mesh.rs  mod.rs  ptr.rs  util.rs  vert.rs
src/shader/: base.fs  base.vs
