[package]
authors = ["Mark Hintz"]
name = "convex_hull"
version = "0.2.3"
license = "MIT"
description = "An implementation of a 3D convex hull algorithm. Comes with an example"
repository = "https://github.com/mhintz/convex_hull"
readme = "README.md"
keywords = ["convex", "hull", "geometry", "3D"]

[dependencies]
cgmath = "^0.16"
glium = "0.22.0"
itertools = "0.4.8"
rand = "0.5.5"
time = "0.1.40"
half_edge_mesh = "^1.1.8"
